; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/arm/extr_pe_init.c_PE_init_panicheader.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/arm/extr_pe_init.c_PE_init_panicheader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@panic_info = common dso_local global %struct.TYPE_3__* null, align 8
@debug_buf_base = common dso_local global i32 0, align 4
@EMBEDDED_PANIC_MAGIC = common dso_local global i32 0, align 4
@EMBEDDED_PANIC_HEADER_CURRENT_VERSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PE_init_panicheader() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** @panic_info, align 8
  %2 = icmp ne %struct.TYPE_3__* %1, null
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %17

4:                                                ; preds = %0
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @panic_info, align 8
  %6 = call i32 @bzero(%struct.TYPE_3__* %5, i32 4)
  %7 = load i32, i32* @debug_buf_base, align 4
  %8 = call i32 @PE_get_offset_into_panic_region(i32 %7)
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @panic_info, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* @EMBEDDED_PANIC_MAGIC, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @panic_info, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* @EMBEDDED_PANIC_HEADER_CURRENT_VERSION, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** @panic_info, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  br label %17

17:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @bzero(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @PE_get_offset_into_panic_region(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
